Link against libpthread

--- a/hfpd/Makefile.am
+++ b/hfpd/Makefile.am
@@ -9,7 +9,7 @@ EXTRA_PROGRAMS = hfpdtext
 hfpd_SOURCES = hfpd.cpp dbus.cpp util.cpp configfile.cpp objects.cpp \
 		configfile.h util.h dbus.h dbus-marshall.h proto.h \
 		objects.h
-hfpd_LDADD = -L../libhfp -lhfp $(libhfp_LIBS) $(DBUS_LIBS)
+hfpd_LDADD = -L../libhfp -lhfp $(libhfp_LIBS) $(DBUS_LIBS) -lpthread
 hfpd_DEPENDENCIES = ../libhfp/libhfp.a
 
 hfpdtext_SOURCES = hfpdtext.cpp net.cpp util.cpp configfile.cpp \
