Add  -fpermissive CXXFLAG to work around compile errors

--- a/libhfp/Makefile.am
+++ b/libhfp/Makefile.am
@@ -1,6 +1,6 @@
 # $Id: $
 
-AM_CXXFLAGS = -Wshadow -fno-exceptions
+AM_CXXFLAGS = -Wshadow -fno-exceptions -fpermissive
 INCLUDES = -I$(top_srcdir)/include -include config.h
 
 noinst_LIBRARIES = libhfp.a
