--- a/qt/Makefile.am
+++ b/qt/Makefile.am
@@ -1,16 +1,15 @@
 # $Id: $
 
-INCLUDES = -I$(top_srcdir)/include -include config.h $(QT_CFLAGS)
+AM_CPPFLAGS = -I$(top_srcdir)/include -include config.h $(QT_CFLAGS)
 
 bin_PROGRAMS = hfstandalone
 
 uic_files = nohands.ui prefs.ui scandialog.ui
 uic_built_hdrs = $(uic_files:.ui=.h)
-uic_built_srcs = $(uic_files:.ui=.cpp)
-moc_inputs = nohands.h prefs.h scandialog.h events-qt.h
+moc_inputs = nohandswidget.h prefswidget.h scandialogwidget.h events-qt.h
 moc_built_srcs = $(moc_inputs:.h=.moc)
-commonbuiltsrc = $(uic_built_hdrs) $(uic_built_srcs) $(moc_built_srcs)
-commonsrc = events-qt.h nohands.ui.h prefs.ui.h scandialog.ui.h 
+commonbuiltsrc = $(uic_built_hdrs) $(moc_built_srcs)
+commonsrc = events-qt.h nohandswidget.h prefswidget.h scandialogwidget.h
 
 nodist_hfstandalone_SOURCES = $(commonbuiltsrc)
 hfstandalone_SOURCES = $(commonsrc) hfstandalone.cpp
@@ -24,16 +23,10 @@ EXTRA_DIST = $(uic_files)
 .ui.h: $(@:.h=.ui)
 	$(UIC) $^ -o $@
 
-.ui.cpp: $(@:.cpp=.h) $(@:.cpp=.ui)
-	$(UIC) -impl $(@:.cpp=.h) $< -o $@
-
 .h.moc: $(@:.moc=.h)
 	$(MOC) $< -o $@
 
 hfstandalone.moc: hfstandalone.cpp
 	$(MOC) $< -o $@
 
-hfstandalone.o: nohands.h scandialog.h prefs.h hfstandalone.moc events-qt.moc
-nohands.o: nohands.cpp nohands.ui.h nohands.moc
-prefs.o: prefs.cpp prefs.ui.h prefs.moc
-scandialog.o: scandialog.cpp scandialog.ui.h scandialog.moc
+hfstandalone.o: nohands.h nohandswidget.h nohandswidget.moc scandialog.h scandialogwidget.h scandialogwidget.moc prefs.h prefswidget.h prefswidget.moc hfstandalone.moc events-qt.moc
